--- a/alienads_propssdk/build.gradle
+++ b/alienads_propssdk/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'com.props.adsmanager'
-version = '1.0.3'
+version = '1.0.6.1'
 
 android {
     namespace 'com.props.adsmanager'
@@ -35,9 +35,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'com.google.android.gms:play-services-ads:22.4.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation('com.squareup.retrofit2:retrofit:2.9.0') {
         exclude module: 'okhttp'
     }
@@ -49,13 +46,14 @@ dependencies {
     implementation 'com.mobilefuse.sdk:mobilefuse-adapter-admob:1.7.1.0'
     implementation 'com.vungle:vungle-ads:7.1.0'
     implementation 'com.google.android.gms:play-services-ads:22.1.0'
-
     implementation 'com.google.ads.mediation:ironsource:7.7.0.1'
-
     implementation 'com.unity3d.ads:unity-ads:4.9.2'
     implementation 'com.google.ads.mediation:unity:4.9.2.0'
     implementation 'co.ogury:ogury-sdk:5.+'
     implementation 'co.ogury:ogury-mediation-gam:5.+'
+    implementation("com.google.android.ump:user-messaging-platform:2.2.0")
+    implementation 'com.google.ads.mediation:pangle:5.8.0.9.0'
+    implementation 'com.google.ads.mediation:vungle:7.1.0.0'
 }
 
 afterEvaluate {
@@ -64,14 +62,14 @@ afterEvaluate {
             maven(MavenPublication) {
                 groupId = 'com.props.adsmanager'
                 artifactId = 'alienads_propssdk'
-                version = '1.0.3'
+                version = '1.0.6.1'
                 afterEvaluate {
                     from components.release
                 }
                 pom {
                     name = 'alienads_propssdk'
                     description = 'Props Aliendroid Adsmanager'
-                    version = '1.0.1'
+                    version = '1.0.6.1'
                     groupId = 'com.props.adsmanager'
                 }
 //
