--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,9 @@ pluginManagement {
         maven {
             url 'https://android-sdk.is.com/'
         }
+        maven {
+            url 'https://artifact.bytedance.com/repository/pangle/'
+        }
     }
 }
 dependencyResolutionManagement {
@@ -23,6 +26,9 @@ dependencyResolutionManagement {
         }
         maven {
             url 'https://android-sdk.is.com/'
+        }
+        maven {
+            url 'https://artifact.bytedance.com/repository/pangle/'
         }
     }
 }
